@@ -10,6 +10,7 @@
 - JRUBY-2011: Fix MSSQL string un-quoting issue (Silvio Fonseca)
 - JRUBY-1977, 17427: Fix information_schema select issue with MSSQL (Matt Burke)
 - 20479: Improve get_table_name for MSSQL (Aslak Hellesøy)
+- 20243: numerics improvements for MSSQL (Aslak Hellesøy)
 
 == 0.8
 
